--- a/www/index.html
+++ b/www/index.html
@@ -1,2 +1,21 @@
+<!DOCTYPE html>
 <html>
+    <head>
+        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
+        <title>Note</title>
+
+        <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
+
+    </head>
+    <body>
+
+        <!-- put jQuery mobile pages here -->
+
+        <script type="text/javascript" src="cordova.js"></script>
+        <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+        <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+        <script type="text/javascript">
+            //put JS code here
+        </script>
+    </body>
 </html>
