--- a/www/index.html
+++ b/www/index.html
@@ -14,11 +14,7 @@
         <script type="text/javascript" src="cordova.js"></script>
         <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
         <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
-        <script src="js/main.js"type="text/javascript">
+        <script src="js/main.js" type="text/javascript"></script>
            
-
-
-}, false);
-        </script>
     </body>
 </html>
