--- a/www/index.html
+++ b/www/index.html
@@ -9,6 +9,41 @@
     </head>
     <body>
 
+<!-- Pagina principal con todas las opciones-->
+        <div data-role="page" id="welcome">
+            <div data-role="header">
+                <h1>Carabobo Trackers</h1>
+            </div>
+            <div data-role="main" class="ui-content">
+                <p>
+                    <a target="_blank" href="#apagar"><button>Apagar automovil</button></a>
+                    <a target="_blank" href="#enceder"><button>Permitir marcha</button></a>
+                    <a target="_blank" href="#arm"><button>Activar alarmas</button></a>
+                    <a target="_blank" href="#perimetro"><button>Delimitar automovil</button></a>
+                    <a target="_blank" href="#espia"><button>Iniciar microfono</button></a>
+                </p>
+            </div>
+        </div>
+<!-- Pagina a mostrar la primera vez que se incia la app-->
+        <div data-role="page" id="firstime">
+            <div data-role="header">
+                <h1>Bienvenido</h1>
+            </div>
+            <div data-role="main" class="ui-content">
+                <p>
+                    <input type="text" id="itelefono" placeholder="Ingrese el numero telefono del GPS"/>
+                    <input type="text" id="iactivacion" placeholder="Ingrese el codigo de activacion"/>
+                    <a target="_blank" href="javascript:registerapp()"><button>Registrar y activar</button></a>
+
+                </p>
+        </div>
+<!--Pagina de reconfiguracion-->
+
+
+<!--Pagina para mostrar el GPS-->        
+
+
+
         <!-- put jQuery mobile pages here -->
 
         <script type="text/javascript" src="cordova.js"></script>
