--- a/www/index.html
+++ b/www/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
-        <title>Note</title>
+        <title>Carabobo Trackers</title>
 
         <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
 
@@ -47,8 +47,15 @@
         <!-- put jQuery mobile pages here -->
 
         <script type="text/javascript" src="cordova.js"></script>
-        <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-        <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+        <script src="js/jquery-2.1.4.min.js"></script>
+        <script>
+             $(document).bind('mobileinit',function(){
+             $.mobile.changePage.defaults.changeHash = false;
+             $.mobile.hashListeningEnabled = false;
+             $.mobile.pushStateEnabled = false;
+    });
+    </script> 
+        <script src="js/jquery.mobile-1.4.5.min.js"></script>
         <script src="js/main.js" type="text/javascript"></script>
            
     </body>
