--- a/www/index.html
+++ b/www/index.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
         <title>Carabobo Trackers</title>
 
-        <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
+        <link rel="stylesheet" href="styles/jquery.mobile.structure-1.4.5.min.css">
         <link rel="stylesheet" href="styles/styles.css">
         <link rel="stylesheet" href="styles/themes/gpscss.css" />
         <link rel="stylesheet" href="styles/themes/jquery.mobile.icons.min.css" />
