--- a/www/index.html
+++ b/www/index.html
@@ -11,22 +11,6 @@
 
     </head>
     <body>
-
-<!-- Pagina principal con todas las opciones-->
-        <div data-role="page" id="welcome">
-            <div data-role="header">
-                <h1>Carabobo Trackers</h1>
-            </div>
-            <div data-role="main" class="ui-content">
-                <p>
-                    <a target="_blank" href="#apagar"><button>Apagar automovil</button></a>
-                    <a target="_blank" href="#enceder"><button>Permitir marcha</button></a>
-                    <a target="_blank" href="#arm"><button>Activar alarmas</button></a>
-                    <a target="_blank" href="#perimetro"><button>Delimitar automovil</button></a>
-                    <a target="_blank" href="#espia"><button>Iniciar microfono</button></a>
-                </p>
-            </div>
-        </div>
 <!-- Pagina a mostrar la primera vez que se incia la app-->
         <div data-role="page" id="firstime">
             <div data-role="header">
@@ -40,6 +24,22 @@
 
                 </p>
         </div>
+<!-- Pagina principal con todas las opciones-->
+        <div data-role="page" id="welcome">
+            <div data-role="header">
+                <h1>Carabobo Trackers</h1>
+            </div>
+            <div data-role="main" class="ui-content">
+                <p>
+                    <a  href="#firstime"><button>Apagar automovil</button></a>
+                    <a target="_blank" href="#enceder" style=""><button>Permitir marcha</button></a>
+                    <a target="_blank" href="#arm"><button>Activar alarmas</button></a>
+                    <a target="_blank" href="#perimetro"><button>Delimitar automovil</button></a>
+                    <a target="_blank" href="#espia"><button>Iniciar microfono</button></a>
+                </p>
+            </div>
+        </div>
+
 <!--Pagina de reconfiguracion-->
 
 
