--- a/www/index.html
+++ b/www/index.html
@@ -20,9 +20,10 @@
                 <p>
                     <input type="text" id="itelefono" placeholder="Ingrese el numero telefono del GPS"/>
                     <input type="text" id="iactivacion" placeholder="Ingrese el codigo de activacion"/>
-                    <a target="_blank" href="javascript:registerapp()"><button>Registrar y activar</button></a>
+                    <a  href="#welcome" style="text-decoration:none"><button>Registrar y activar</button></a>
 
                 </p>
+            </div>
         </div>
 <!-- Pagina principal con todas las opciones-->
         <div data-role="page" id="welcome">
