--- a/www/index.html
+++ b/www/index.html
@@ -32,12 +32,17 @@
             </div>
             <div data-role="main" class="ui-content">
                 <p>
-                    <a  href="#firstime"><button>Apagar automovil</button></a>
-                    <a target="_blank" href="#enceder" style=""><button>Permitir marcha</button></a>
-                    <a target="_blank" href="#arm"><button>Activar alarmas</button></a>
-                    <a target="_blank" href="#perimetro"><button>Delimitar automovil</button></a>
-                    <a target="_blank" href="#espia"><button>Iniciar microfono</button></a>
-                </p>
+                    <a  href="#firstime" style="text-decoration:none"><button>Apagar automovil</button></a>
+                    <a  href="javascript:doMenu(1)" style="text-decoration:none"><button>Encender automovil</button></a>
+                    <a  href="javascript:doMenu(2)"  style="text-decoration:none"><button>Ver ubicacion del vehiculo</button></a>
+                    <a  href="javascript:doMenu(3)"  style="text-decoration:none"><button>Activar perimetro</button></a>
+                    <a  href="javascript:doMenu(4)"  style="text-decoration:none"><button>Desactivar perimetro</button></a>
+                    <a  href="javascript:doMenu(5)"  style="text-decoration:none"><button>Recorrido historico</button></a>
+                    <br>
+                    <a  href="javascript:doMenu(6)"  style="text-decoration:none"><button>Avanzado</button></a>
+                    <a  href="javascript:doMenu(7)"  style="text-decoration:none"><button>Configurar App Web</button></a>
+                    <a  href="javascript:doMenu(8)"  style="text-decoration:none"><button>Desactivar apagado</button></a>
+                    <a  href="javascript:doMenu(-1)"  style="text-decoration:none"><button>Salir</button></a>
             </div>
         </div>
 
