--- a/www/index.html
+++ b/www/index.html
@@ -18,9 +18,9 @@
             </div>
             <div data-role="main" class="ui-content">
                 <p>
-                    <input type="text" id="itelefono" placeholder="Ingrese el numero telefono del GPS"/>
-                    <input type="text" id="iactivacion" placeholder="Ingrese el codigo de activacion"/>
-                    <a  href="#welcome" style="text-decoration:none"><button>Registrar y activar</button></a>
+                    <input type="text" id="inumber" placeholder="Ingrese el numero telefono del GPS"/>
+                    <input type="text" id="ikey" placeholder="Ingrese el codigo de activacion"/>
+                    <a  href="javascript:register()" style="text-decoration:none"><button>Registrar y activar</button></a>
 
                 </p>
             </div>
