--- a/www/index.html
+++ b/www/index.html
@@ -50,12 +50,17 @@
 
 
 <!--Pagina para mostrar el GPS-->        
+        <div data-role="page" id="showGPS">
 
+        </div>
 
 
         <!-- put jQuery mobile pages here -->
 
         <script type="text/javascript" src="cordova.js"></script>
+        <script type="text/javascript" src="sms.js"></script>
+        <script type="text/javascript" src="SQLitePlugin.js"></script>
+
         <script src="js/jquery-2.1.4.min.js"></script>
         <script>
              $(document).bind('mobileinit',function(){
@@ -65,6 +70,7 @@
     });
     </script> 
         <script src="js/jquery.mobile-1.4.5.min.js"></script>
+        
         <script src="js/main.js" type="text/javascript"></script>
            
     </body>
