--- a/www/index.html
+++ b/www/index.html
@@ -1,7 +1,10 @@
-<!DOCTYPE html>
+
+<!DOCTYPE html >
+
 <html>
     <head>
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
+        <meta charset="UTF-8">
         <title>Carabobo Trackers</title>
 
         <link rel="stylesheet" href="styles/jquery.mobile.structure-1.4.5.min.css">
@@ -31,7 +34,7 @@
                 <h1>Carabobo Trackers</h1>
             </div>
             <div data-role="main" class="ui-content">
-                <p>
+                
                     <a  href="#firstime" style="text-decoration:none"><button>Apagar automovil</button></a>
                     <a  href="javascript:doMenu(1)" style="text-decoration:none"><button>Encender automovil</button></a>
                     <a  href="javascript:doMenu(2)"  style="text-decoration:none"><button>Ver ubicacion del vehiculo</button></a>
