--- a/www/index.html
+++ b/www/index.html
@@ -34,18 +34,19 @@
                 <h1>Carabobo Trackers</h1>
             </div>
             <div data-role="main" class="ui-content">
-                
-                    <a  href="#firstime" style="text-decoration:none"><button>Apagar automovil</button></a>
-                    <a  href="javascript:doMenu(1)" style="text-decoration:none"><button>Encender automovil</button></a>
-                    <a  href="javascript:doMenu(2)"  style="text-decoration:none"><button>Ver ubicacion del vehiculo</button></a>
-                    <a  href="javascript:doMenu(3)"  style="text-decoration:none"><button>Activar perimetro</button></a>
-                    <a  href="javascript:doMenu(4)"  style="text-decoration:none"><button>Desactivar perimetro</button></a>
-                    <a  href="javascript:doMenu(5)"  style="text-decoration:none"><button>Recorrido historico</button></a>
+                <ul data-role="listview">    
+                    <a  href="#firstime" style="text-decoration:none"><li>Apagar automovil</li></a>
+                    <a  href="javascript:doMenu(1)" style="text-decoration:none"><li>>Encender automovil</li></a>
+                    <a  href="javascript:doMenu(2)"  style="text-decoration:none"><li>Ver ubicacion del vehiculo</li></a>
+                    <a  href="javascript:doMenu(3)"  style="text-decoration:none"><li>Activar perimetro</li></a>
+                    <a  href="javascript:doMenu(4)"  style="text-decoration:none"><li>Desactivar perimetro</li></a>
+                    <a  href="javascript:doMenu(5)"  style="text-decoration:none"><li>Recorrido historico</li></a>
                     <br>
-                    <a  href="javascript:doMenu(6)"  style="text-decoration:none"><button>Avanzado</button></a>
-                    <a  href="javascript:doMenu(7)"  style="text-decoration:none"><button>Configurar App Web</button></a>
-                    <a  href="javascript:doMenu(8)"  style="text-decoration:none"><button>Desactivar apagado</button></a>
-                    <a  href="javascript:doMenu(-1)"  style="text-decoration:none"><button>Salir</button></a>
+                    <a  href="javascript:doMenu(6)"  style="text-decoration:none"><li>Avanzado</li></a>
+                    <a  href="javascript:doMenu(7)"  style="text-decoration:none"><li>Configurar App Web</li>/a>
+                    <a  href="javascript:doMenu(8)"  style="text-decoration:none"><li>Desactivar apagado</li>/a>
+                    <a  href="javascript:doMenu(-1)"  style="text-decoration:none"><li>Salir</li></a>
+                </ul>
             </div>
         </div>
 
