--- a/www/index.html
+++ b/www/index.html
@@ -35,17 +35,17 @@
             </div>
             <div data-role="main" class="ui-content">
                 <ul data-role="listview">    
-                    <a  href="#firstime" style="text-decoration:none"><li>Apagar automovil</li></a>
-                    <a  href="javascript:doMenu(1)" style="text-decoration:none"><li>>Encender automovil</li></a>
-                    <a  href="javascript:doMenu(2)"  style="text-decoration:none"><li>Ver ubicacion del vehiculo</li></a>
-                    <a  href="javascript:doMenu(3)"  style="text-decoration:none"><li>Activar perimetro</li></a>
-                    <a  href="javascript:doMenu(4)"  style="text-decoration:none"><li>Desactivar perimetro</li></a>
-                    <a  href="javascript:doMenu(5)"  style="text-decoration:none"><li>Recorrido historico</li></a>
+                    <li><a  href="#firstime" style="text-decoration:none">Apagar automovil</a></li>
+                    <li><a  href="javascript:doMenu(1)" style="text-decoration:none">Encender automovil</a></li>
+                    <li><a  href="javascript:doMenu(2)"  style="text-decoration:none">Ver ubicacion del vehiculo</a>
+                    <li><a  href="javascript:doMenu(3)"  style="text-decoration:none">Activar perimetro</a></li>
+                    <li><a  href="javascript:doMenu(4)"  style="text-decoration:none">Desactivar perimetro</a></li>
+                    <li><a  href="javascript:doMenu(5)"  style="text-decoration:none">Recorrido historico</a></li>
                     <br>
-                    <a  href="javascript:doMenu(6)"  style="text-decoration:none"><li>Avanzado</li></a>
-                    <a  href="javascript:doMenu(7)"  style="text-decoration:none"><li>Configurar App Web</li>/a>
-                    <a  href="javascript:doMenu(8)"  style="text-decoration:none"><li>Desactivar apagado</li>/a>
-                    <a  href="javascript:doMenu(-1)"  style="text-decoration:none"><li>Salir</li></a>
+                    <li><a  href="javascript:doMenu(6)"  style="text-decoration:none">Avanzado</a></li>
+                    <li><a  href="javascript:doMenu(7)"  style="text-decoration:none">Configurar App Web</a></li>
+                    <li><a  href="javascript:doMenu(8)"  style="text-decoration:none">Desactivar apagad</a></li>
+                    <li><a  href="javascript:doMenu(-1)"  style="text-decoration:none">Salir</a></li>
                 </ul>
             </div>
         </div>
