--- a/www/index.html
+++ b/www/index.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="styles/styles.css">
         <link rel="stylesheet" href="styles/themes/gpscss.css" />
         <link rel="stylesheet" href="styles/themes/jquery.mobile.icons.min.css" />
-          <link rel="stylesheet" href="/maps/documentation/javascript/demos/demos.css">
+ 
     </head>
     <body>
 <!-- Pagina a mostrar la primera vez que se incia la app-->
@@ -55,27 +55,15 @@
 
 <!--Pagina para mostrar el GPS-->        
         <div data-role="page" id="showGPS">
-             <div id="map"></div>
-                <script>
-                     function initMap() {
-                        var myLatLng = {lat: -25.363, lng: 131.044};
-
-                        // Create a map object and specify the DOM element for display.
-                        var map = new google.maps.Map(document.getElementById('map'), {
-                                                                                         center: myLatLng,
-                                                                                         scrollwheel: false,
-                                                                                         zoom: 4
-                                                                                        });
-                        // Create a marker and set its position.
-        var marker = new google.maps.Marker({
-          map: map,
-          position: myLatLng,
-          title: 'Hello World!'
-        });
-      }
-
-    </script>   
-
+             <div id="map"><iframe
+                width="600"
+                height="450"
+                frameborder="0" style="border:0"
+                zoom="18"
+                src="https://www.google.com/maps/embed/v1/place?key=AIzaSyABkfL7IwOZhhRtKVXzP-pRk64zZnapRXU
+                    &q=''&center=-33.8569,151.2152" allowfullscreen>
+</iframe></div>
+             
 
         </div>
 
@@ -85,8 +73,7 @@
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="sms.js"></script>
         <script type="text/javascript" src="SQLitePlugin.js"></script>
-        <script type="text/javascript" src="js/googlemaps.js"></script>
-
+        
         <script src="js/jquery-2.1.4.min.js"></script>
         <script>
              $(document).bind('mobileinit',function(){
