--- a/www/index.html
+++ b/www/index.html
@@ -45,7 +45,7 @@
                     <li><a  href="javascript:doMenu(6)"  style="text-decoration:none">Avanzado</a></li>
                     <li><a  href="javascript:doMenu(7)"  style="text-decoration:none">Configurar App Web</a></li>
                     <li><a  href="javascript:doMenu(8)"  style="text-decoration:none">Desactivar apagad</a></li>
-                    <li><a  href="javascript:doMenu(-1)"  style="text-decoration:none">Salir</a></li>
+                    <li><a  href="#showGPS"  style="text-decoration:none">Salir</a></li>
                 </ul>
             </div>
         </div>
