--- a/www/index.html
+++ b/www/index.html
@@ -60,8 +60,7 @@
                 height="450"
                 frameborder="0" style="border:0"
                 zoom="18"
-                src="https://www.google.com/maps/embed/v1/place?key=AIzaSyABkfL7IwOZhhRtKVXzP-pRk64zZnapRXU
-                    &q=''&center=-33.8569,151.2152" allowfullscreen>
+                src="https://www.google.com/maps/embed/v1/place?key=AIzaSyABkfL7IwOZhhRtKVXzP-pRk64zZnapRXU&q=''&center=-33.8569,151.2152" allowfullscreen>
 </iframe></div>
              
 
