--- a/www/index.html
+++ b/www/index.html
@@ -56,17 +56,7 @@
 <!--Pagina para mostrar el GPS-->        
         <div data-role="page" id="showGPS">
              <div id="map"></div>
-    <script>
-      function initMap() {
-        // Create a map object and specify the DOM element for display.
-        var map = new google.maps.Map(document.getElementById('map'), {
-          center: {lat: -34.397, lng: 150.644},
-          scrollwheel: false,
-          zoom: 8
-        });
-      }
 
-    </script>
           
              
 
@@ -78,7 +68,7 @@
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="sms.js"></script>
         <script type="text/javascript" src="SQLitePlugin.js"></script>
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8ZyCJHhES7hFLC3_RBqht5YkatKGn_mI&callback=initMap"
+        <script type="text/javascript" src="js/gmaps.js"
     async defer></script>
         <script src="js/jquery-2.1.4.min.js"></script>
         <script>
