--- a/www/index.html
+++ b/www/index.html
@@ -35,7 +35,7 @@
             </div>
             <div data-role="main" class="ui-content">
                 <ul data-role="listview">    
-                    <li><a  href="#firstime" style="text-decoration:none">Apagar automovil</a></li>
+                    <li><a  href="javascript:doMenu(0)" style="text-decoration:none">Apagar automovil</a></li>
                     <li><a  href="javascript:doMenu(1)" style="text-decoration:none">Encender automovil</a></li>
                     <li><a  href="javascript:doMenu(2)"  style="text-decoration:none">Ver ubicacion del vehiculo</a>
                     <li><a  href="javascript:doMenu(3)"  style="text-decoration:none">Activar perimetro</a></li>
