--- a/www/index.html
+++ b/www/index.html
@@ -33,7 +33,7 @@
             <div data-role="header">
                 <h1>Carabobo Trackers</h1>
             </div>
-            <div data-role="main" class="ui-content">
+            <div data-role="main" class="ui-content"id="appmenu">
                 <ul data-role="listview">    
                     <li><a  href="javascript:doMenu(0)" style="text-decoration:none">Apagar automovil</a></li>
                     <li><a  href="javascript:doMenu(1)" style="text-decoration:none">Encender automovil</a></li>
