--- a/www/index.html
+++ b/www/index.html
@@ -40,7 +40,7 @@
                     <li><a  href="javascript:doMenu(2)"  style="text-decoration:none">Ver ubicacion del vehiculo</a>
                     <li><a  href="javascript:doMenu(3)"  style="text-decoration:none">Activar perimetro</a></li>
                     <li><a  href="javascript:doMenu(4)"  style="text-decoration:none">Desactivar perimetro</a></li>
-                    <li><a  href="javascript:doMenu(5)"  style="text-decoration:none">Recorrido historico</a></li>
+                    <li><a  href="javascript:doMenu(5)"  style="text-decoration:none">Activar alarma de movimento</a></li>
                     <br>
                     <li><a  href="#config-page"  style="text-decoration:none">Avanzado</a></li>
                     <li><a  href="#config-app"  style="text-decoration:none">Configurar App Web</a></li>
@@ -59,12 +59,12 @@
 
             <div data-role="main" class="ui-content" id="config-menu">
                 <ul data-role="listview">
+                    <li><a href="javascript:doConfigMenu(0)" style="text-decoration:none">Cambio de clave </a></li>
+                    <li><a href="javascript:doConfigMenu(0)" style="text-decoration:none"></a></li>
                     <li><a href="javascript:doConfigMenu(0)" style="text-decoration:none"> </a></li>
                     <li><a href="javascript:doConfigMenu(0)" style="text-decoration:none"> </a></li>
                     <li><a href="javascript:doConfigMenu(0)" style="text-decoration:none"> </a></li>
-                    <li><a href="javascript:doConfigMenu(0)" style="text-decoration:none"> </a></li>
-                    <li><a href="javascript:doConfigMenu(0)" style="text-decoration:none"> </a></li>
-                    <li><a href="javascript:doConfigMenu(0)" style="text-decoration:none"> </a></li>
+                    <li><a href="javascript:doConfigMenu(0)" style="text-decoration:none">Eliminar cuenta</a></li>
                     <li><a href="javascript:doConfigMenu(0)" style="text-decoration:none"> </a></li>
                 </ul>
                 <br>
