--- a/www/index.html
+++ b/www/index.html
@@ -123,6 +123,7 @@
 
 
         <script type="text/javascript" src="cordova.js"></script>
+        <script type="text/javascript" src=""
          <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8ZyCJHhES7hFLC3_RBqht5YkatKGn_mI&callback=initMap" async defer></script>
         <script src="js/jquery-2.1.4.min.js"></script>
         <script>
