--- a/www/index.html
+++ b/www/index.html
@@ -40,8 +40,8 @@
                     <li><a  href="javascript:doMenu(2)"  style="text-decoration:none">Ver ubicacion del vehiculo</a>
                     <li><a  href="javascript:doMenu(3)"  style="text-decoration:none">Activar perimetro</a></li>
                     <li><a  href="javascript:doMenu(4)"  style="text-decoration:none">Desactivar perimetro</a></li>
-                    <li><a  href="javascript:doMenu(5)"  style="text-decoration:none">Activar alarma de movimento</a></li>
-                    <li><a  href="javascript:doMenu(7)"  style="text-decoration:none">Activar microfono</a></li>
+                    <li><a  href="javascript:doMenu(5)"  style="text-decoration:none">Activar alarma de movimiento</a></li>
+                    <li><a  href="javascript:doMenu(7)"  style="text-decoration:none">Desactivar Alarma de movimiento</a></li>
                     <br>
                     <li><a  href="#config-page"  style="text-decoration:none">Avanzado</a></li>
                     <li><a  href="#config-app"  style="text-decoration:none">Configurar App Web</a></li>
