--- a/www/index.html
+++ b/www/index.html
@@ -79,11 +79,11 @@
                 <h1>Carabobo Trackers Traccar </h1>
             </div>
             <div data-role="main" class ="ui-content">
-                <input type="number" id="textIMEI" placeholder="Ingrese el IMEI del GPS"/>
+                <input type="number" id="textIMEI" placeholder="Ingrese el IMEI del GPS" style="visibility:none"/>
                 <input type="text" id="textUsrName" placeholder="Ingrese el nombre de usario"/>
                 <input type="password" id="textPass" placeholder="Escriba su contraseña"/>
-                <a href="javascript:doConfigAppMenu()"><button class="ui-btn">Conectar</button></a>
-                <a href="#welcome"><button class="ui-btn">Volver</button></a>
+                <a href="javascript:doConfigAppMenu()" style="text-decoration:none"><button class="ui-btn">Conectar</button></a>
+                <a href="#welcome"><button class="ui-btn" style="text-decoration:none">Volver</button></a>
             </div>
         </div>    
 
